# CHIP-8

./: .gitignore  .gitmodules  CHIP8.cpp  CHIP8.h  CMakeLists.txt  README.md  build.zig  display.h  graphics.cpp  graphics.h  imgui.ini  keyboard.h  main.cpp  neovim.json
.cache/clangd/index/: CHIP8.cpp.B003E8ADB856AAE8.idx  CHIP8.h.01E5D895D941D70D.idx  main.cpp.1DFA8592CB4F6271.idx
.github/workflows/: cmake-single-platform.yml  zig-single-platform.yml
include/: chip8.hpp  display.hpp  graphics.h  graphics.hpp  interpreter.hpp  keyboard.hpp
src/: CHIP8.cpp  CMakeLists.txt  chip8.cpp  display.cpp  graphics.cpp  graphics.hpp  interpreter.cpp  keyboard.cpp  main.cpp
